# SPI-IN-PI42TAS

./: .gitignore  CMakeLists.txt  IN_PI42TAS.c  IN_PI42TAS.h  LICENSE  README.md
